added passthrough for writables + tests

--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
   "author": "Luke Burns <lukemburns@gmail.com> (http://lukeburns.com/)",
   "license": "ISC",
   "dependencies": {
-    "through2": "^0.5.1",
-    "repipe": "^0.0.1"
+    "through2": "^0.5.1"
   },
   "devDependencies": {
     "tap": "^0.4.11"
