--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "through2-pipeline",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "For laying pipelines",
   "main": "index.js",
   "scripts": {
@@ -8,8 +8,8 @@
   },
   "dependencies": {
     "through2": "^0.5.1",
-    "through2-pass": "0.0.1",
-    "through2-repipe": "0.0.2"
+    "through2-pass": "^0.0.1",
+    "through2-repipe": "^0.0.2"
   },
   "devDependencies": {
     "tap": "^0.4.11"
